Note markers do no longer overlap the seek bar.

--- a/src/scss/components/_markers.scss
+++ b/src/scss/components/_markers.scss
@@ -15,7 +15,7 @@
 			width: 1.5em;
 			top: -1.6em;
 			padding-top: 0.3em;
-			padding-bottom: 2em;
+			padding-bottom: 0.2em;
 			text-shadow: none;
 
 			.vjs-menu {
